# ToonStats

./: .gitignore  Dockerfile  Justfile  Procfile  docker-compose.yml  logging.yml  pom.xml  pyproject.toml  requirements.txt
src/main/java/dev/jaczerob/toonstats/: App.java
src/main/java/dev/jaczerob/toonstats/config/: CronConfig.java  ToonConfig.java  VaadinConfig.java
src/main/java/dev/jaczerob/toonstats/controllers/: ToonController.java
src/main/java/dev/jaczerob/toonstats/dto/: ToonDTO.java
src/main/java/dev/jaczerob/toonstats/entities/: ToonEntity.java
src/main/java/dev/jaczerob/toonstats/repositories/: ToonRepository.java
src/main/java/dev/jaczerob/toonstats/services/toons/: ToonService.java
src/main/java/dev/jaczerob/toonstats/services/toons/locators/: ToonLocator.java
src/main/java/dev/jaczerob/toonstats/services/toons/locators/toonhq/: ToonHQToon.java  ToonHQToonLocator.java
src/main/java/dev/jaczerob/toonstats/views/: MainView.java
src/main/resources/: application.properties
toonstats/: __main__.py  client.py  settings.py
toonstats/app/: main.py
toonstats/app/routers/: health.py  root.py
toonstats/app/routers/events/: __init__.py
toonstats/database/: __init__.py
toonstats/estates/: __init__.py  database.py
toonstats/finders/: __init__.py  toonhq.py
toonstats/models/: __init__.py
toonstats/toonhq/: models.py  scraper.py
