[tool.poetry]
name = "toonstats"
version = "0.1.0"
description = ""
authors = ["Jacob <jacob@jaczerob.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
aiomysql = "^0.1.1"
loguru = "^0.7.0"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
